Feat/Refactor(payment/superuser/docs/security): 결제 예약·의도·조회와 슈퍼유저 가입·프로필·배너 전면 최적화 (#124) - payment/controller: 단건·배치 재고 예약(request/request-batch), RID 상태 조회, 멱등 확정(response-by-reserve), 의도 생성(intents), PG 콜백(success/fail), 내 결제/my·brand/my·admin·상세 API 구현 및 성능 로깅 최소화 - payment/docs: PaymentApiDocs의 success/fail 시그니처에 authUserId 파라미터 추가, 컨트롤러와 인터페이스 시그니처 불일치로 인한 구현 누락 컴파일 오류 해소 - payment/perf: 장바구니 동일 옵션 mergeByOption으로 과차감 방지, 신규 RID일 때만 Kafka 전송, toList 사용과 컬렉션 초기 용량 예약으로 불필요한 객체 생성 감소 - payment/security: @PreAuthorize로 NORMAL/BRAND/SUPER 접근 제어, 컨트롤러는 인증 주입과 위임만 담당하여 책임 분리 - super-user/service: 회원가입(signUp) 시 중복검증(아이디/이메일/전화) 후 비번 해시·생성자 저장, 배너는 가입 시 무시하고 업로드 API로만 반영 - super-user/service: 프로필 수정(modifyProfile)은 Optional 인라인 계산 + 도메인 메서드 1회 호출(updateAll)로 Dirty Checking 최소 UPDATE, 중복 대조는 변경 의도 필드에만 수행 - super-user/entity: @DynamicUpdate 적용으로 변경 칼럼만 UPDATE, updateAll로 부모의 보호 필드(id/password/email/phone) 포함 일괄 갱신, @BatchSize(10)로 배너 지연 컬렉션 N+1 완화 - super-user/controller: @NotNull @Size(min=1,max=10)로 멀티 배너 요청 검증(@NotEmpty 제거), Multipart consumes 명시, list API는 불변·빈 컬렉션 일관 반환 - super-user/repository: existsByIdIs로 로그인 ID 중복검사 명확화, findById(@Param(id)) JPQL과 @EntityGraph로 배너 컬렉션 함께 로딩, 불필요 N+1 제거 - super-user/perf: 불필요한 지역 변수(nextLoginId 등) 제거로 Sonar 경고 해소, Stream.collect(Collectors.toUnmodifiableList()) → toList로 JDK15+ 최적 경로 사용 - global/security: 서비스 레이어 ensureSuper 방어적 검증으로 이중 차단, 예외는 BasiliumCustomException으로 전역 핸들러에 위임하여 컨트롤러 try-catch 제거 - global/style: null 금지 원칙 반영(Collections.emptyList, Optional.orElseGet), setter 지양·생성자/도메인 메서드 사용, RESTful URL과 ResponseEntity<ApiResponse> 일관 응답 적용